# github-issues-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: categories.yaml
issues_agent/: __init__.py  analysis.py  classifier.py  cli.py  config.py  duplicates.py  github_client.py  llm_client.py  logging.py  models.py  report.py  scoring.py
tests/: test_analysis.py  test_classifier.py  test_cli.py  test_config.py  test_duplicates.py  test_github_client.py  test_integration.py  test_models.py  test_report.py  test_scoring.py  test_scoring_errors.py
